Bug 270510 - Bad layer selection error
Summary: Bad layer selection error
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: pentalis
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-09 16:55 UTC by animtim
Modified: 2011-06-11 18:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description animtim 2011-04-09 16:55:46 UTC
Version:           svn trunk (using KDE 4.5.1) 
OS:                Linux

Sometimes when I click on another layer, the layer stack show it selected but I still paint on the previous layer.
This doesn't happen every time but still very often.
I mark it as a Major bug as it can be very bad if you start painting on the wrong layer and don't notice it before it's too late.

Reproducible: Sometimes
Comment 1 Dmitry Kazakov 2011-04-10 10:10:04 UTC
Could you try this bug with a new version of Krita? I've just merged the branch there.
Comment 2 animtim 2011-04-10 14:12:46 UTC
Yes it looks like this issue is fixed (cool!) , but move-up/down-layer icons aren't refreshed correctly, which is less dangerous but still bad.
Comment 3 Dmitry Kazakov 2011-04-10 14:28:57 UTC
Looks like the arrows are not updated for Group layers and their content only, right?
Comment 4 animtim 2011-04-10 16:14:39 UTC
No, I noticed it with simply two bitmap layers, no groups.
to reproduce (always reproducible): 
Create a new layer on top of Layer 1,
then select Layer 1 : the "Move layer down" button is available but not the move up (it should be the contrary)
then select Layer 2: the "Move layer up" button is available but not the move down (it should be the contrary)
Comment 5 Halla Rempt 2011-05-26 21:09:44 UTC
Pentalis is going to hack on this.
Comment 6 animtim 2011-05-27 20:44:20 UTC
I think Bug 273560  is a duplicate of this one, same "previously selected layer infos" thing but for blend mode and opacity. (I knew I already reported this before ;) )
Comment 7 pentalis 2011-06-11 18:28:17 UTC
Git commit a76369188f12c4bd22eee0bd82b65bc70656c34a by José Luis Vergara.
Committed on 11/06/2011 at 18:22.
Pushed by jlvergara into branch 'master'.

Temporary bug fix of the Krita layerbox to let artists paint with the master branch

o Minimal bugfix, good for the user, but probably not correct from a coder's point of view.
o It will be replaced by a more correct bugfix later (unless this was actually the most correct way to fix it).
BUG:270510
BUG:273560

M  +3    -1    krita/plugins/extensions/dockers/defaultdockers/kis_layer_box.cpp     

http://commits.kde.org/calligra/a76369188f12c4bd22eee0bd82b65bc70656c34a