Temporary bug fix of the Krita layerbox to let artists paint with the master branch

o Minimal bugfix, good for the user, but probably not correct from a coder's point of view.
o It will be replaced by a more correct bugfix later (unless this was actually the most correct way to fix it).
BUG:270510
BUG:273560